--- a/raon-control/table-test.html
+++ b/raon-control/table-test.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="archive.css">
 <link rel="stylesheet" type="text/css" href="font-awesome.min.css">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="script/jquery.min.js"></script>
 
 <style>
 table {
