--- a/raon-control/documents.html
+++ b/raon-control/documents.html
@@ -55,7 +55,8 @@
         }
 
         .document-body {
-            width: 1920;
+            width: 1920px;
+            margin: auto;
         }
 
         .container {
