--- a/raon-control/makecalendar.html
+++ b/raon-control/makecalendar.html
@@ -3,18 +3,30 @@
 
 <head>
     <style>
-        /* #calendar {
-            border-collapse: collapse;
-            table-layout: fixed;
+        @font-face {
+            font-family: "Helvetica-Neue-Light";
+            src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
         }
 
-        td {
-            border: 1px solid black;
-            color: red;
-        } */
         table {
+            background-color: #1d1d1d;
             border-collapse: collapse;
             color: white;
+            font-family: "Helvetica-Neue-Light";
+        }
+
+        .year {
+            height: 80px;
+            text-align: center;
+            background-color: #181818;
+        }
+
+        .week {
+            height: 40px;
+            text-align: center;
+            font-size: 15px;
+            color: gray;
+            background-color: #181818;
         }
 
         td {
@@ -23,7 +35,7 @@
             /*box-sizing: border-box;*/
             border-collapse: collapse;
             /*border: 1px solid black;*/
-            background-color: #1d1d1d
+            /* background-color: #1d1d1d */
         }
 
         button {
@@ -32,25 +44,85 @@
             border: none;
             background-color: #4CAF50;
             border-radius: 13px;
+            color: white;
+        }
+
+        .day-box {
+            width: 40px;
+            height: 40px;
+            margin: 5px;
+            text-align: center;
+            line-height: 40px;
+            border-radius: 20px;
+        }
+
+        .today-box {
+            font-size: 32px;
+            font-family: "Helvetica-Neue-Light";
+            color: white;
+            margin-top: 30px;
+        }
+
+        .today-schedule-box {
+            width: 780px;
+            height: 80px;
+            font-size: 18px;
+            font-family: "Helvetica-Neue-Light";
+            color: white;
+            margin-top: 10px;
+            background-color: #1d1d1d;
+            /* padding: 10px; */
+            /* box-sizing: border-box; */
+
         }
     </style>
 </head>
 
-<body>
+<body style="background-color: black;">
 
-    <button onclick="prevCalendar()">Prev</button>
-    <button onclick="nextCalendar()">Next</button>
-    <!--
-    <div>
-        <table id="calendar">
+    <!-- <button onclick="prevCalendar()">Prev</button>
+    <button onclick="nextCalendar()">Next</button> -->
 
+    <div id="calendar-box">
+        <table id="calendar-header">
+            <tr>
+                <!-- label은 마우스로 클릭을 편하게 해줌 -->
+                <td class="year"><label onclick="prevCalendar()">&#10094;</label></td>
+                <td class="year" id="calendarYear" colspan="5" style="font-size:32px;">May 2020</td>
+                <td class="year"><label onclick="nextCalendar()">&#10095;</label></td>
+            </tr>
+            <tr>
+                <td class="week">SUN</td>
+                <td class="week">MON</td>
+                <td class="week">TUE</td>
+                <td class="week">WED</td>
+                <td class="week">THU</td>
+                <td class="week">FRI</td>
+                <td class="week">SAT</td>
+            </tr>
         </table>
+
+        <table id="calendar"></table>
+
+        <div class="today-box">Today</div>
+        <div class="today-schedule-box">
+            The third effect depends not only on the top position of the window’s scrollbar, but also on the width
+            property of the window. More specifically, we are making the following assumptions
+        </div>
+    </div>
+
+    <div id="schedule-box">
+
+    </div>
+
+    <div id="shifter-box">
+
     </div>
 
     <br><br><br>
--->
 
-    <div id="test"></div>
+
+    <div id="test" style="color:white"></div>
 
     <script>
         var today = new Date();
@@ -78,15 +150,15 @@
 
             var tb = document.getElementById("calendar");
 
-            if (tb) {
-                tb.remove();
+            while (tb.rows.length) {
+                tb.deleteRow(tb.rows.length - 1);
             }
 
-            var x = document.createElement("TABLE");
-            x.setAttribute("id", "calendar");
-            document.body.appendChild(x);
+            // var x = document.createElement("TABLE");
+            // x.setAttribute("id", "calendar");
+            // document.body.appendChild(x);
 
-            tb = document.getElementById("calendar");
+            // tb = document.getElementById("calendar");
 
             //document.getElementById("test").innerHTML = tb.rows();
 
@@ -94,8 +166,26 @@
 
             var cell = null;
             var rowPos = 0;
-            var count = startDate;
+            var tableDay = startDate;
             var cellDate = 0;
+
+            var month = new Array();
+            month[0] = "January";
+            month[1] = "February";
+            month[2] = "March";
+            month[3] = "April";
+            month[4] = "May";
+            month[5] = "June";
+            month[6] = "July";
+            month[7] = "August";
+            month[8] = "September";
+            month[9] = "October";
+            month[10] = "November";
+            month[11] = "December";
+            var m = month[today.getMonth()];
+
+            var cy = document.getElementById("calendarYear");
+            cy.innerHTML = m + " " + today.getFullYear();
 
             for (let w = 0; w < 6; w++) {
                 for (let i = 0; i < 3; i++) {
@@ -105,20 +195,39 @@
                     for (let j = 0; j < 7; j++) {
                         cell = row.insertCell();
                         cell.setAttribute("class", "cellClass", 0);
-
-                        cell.style.width = "100px";
+                        cell.style.width = "110px";
 
                         if (rowPos == 0) {
-                            row.style.height = "40px";
-                            cell.innerHTML = count;
-                            count += 1;
+                            row.style.height = "50px";
 
-                            if ((w == 0) && (count > prevMonthLastDate.getDate())) {
-                                count = 1;
+                            var dayBox = document.createElement("DIV");
+                            dayBox.classList.add("day-box");
+                            dayBox.innerHTML = tableDay;
+
+                            if (i == 0) {
+                                if (j == 0) {
+                                    dayBox.style.color = "red";
+                                }
+                                else if (j == 6) {
+                                    dayBox.style.color = "blue";
+                                }
                             }
 
-                            if ((w > 3) && (count > lastDate.getDate())) {
-                                count = 1;
+                            cell.appendChild(dayBox);
+
+                            if ((date.getFullYear() == today.getFullYear()) && (date.getMonth() == today.getMonth()) && (tableDay == today.getDate())) {
+                                dayBox.style.backgroundColor = "dodgerblue";
+                                addSchedule();
+                            }
+
+                            tableDay += 1;
+
+                            if ((w == 0) && (tableDay > prevMonthLastDate.getDate())) {
+                                tableDay = 1;
+                            }
+
+                            if ((w > 3) && (tableDay > lastDate.getDate())) {
+                                tableDay = 1;
                             }
                         }
                         else if (rowPos == 1) {
@@ -152,6 +261,19 @@
 
                 rowPos = 0;
             }
+
+
+        }
+
+        window.onload = function () {
+            createCalendar();
+        }
+
+        function myFunction() {
+            document.getElementById("test").innerHTML = today.getDate();
+        }
+
+        function addSchedule() {
             // console.log(document.getElementsByClassName("rowClass"));
             // document.getElementsByClassName("cellClass")[29].innerHTML = "scwook";
             var eventRow = document.getElementsByClassName("rowClass");
@@ -164,16 +286,6 @@
             eventCell.appendChild(btn);
             eventRow[4].deleteCell(6);
             eventRow[4].deleteCell(5);
-
-
-        }
-
-        window.onload = function () {
-            createCalendar();
-        }
-
-        function myFunction() {
-            document.getElementById("test").innerHTML = "test";
         }
 
     </script>
