--- a/raon-control/makecalendar.html
+++ b/raon-control/makecalendar.html
@@ -75,19 +75,29 @@
             /* background-color: goldenrod; */
         }
 
-        .beam-schedule-box {
+        .header-box {
             font-size: 32px;
             font-family: "Helvetica-Neue-Light";
             color: white;
             margin-top: 30px;
+            margin-bottom: 10px;
         }
 
         #calendar-header {
             margin: auto;
+            background-color: #1d1d1d;
+            border-collapse: collapse;
+        }
+
+        #calendar-header td {
+            width: 105px;
+        }
+
+        #calendar {
+            background-color: #1d1d1d;
         }
 
         table {
-            background-color: #1d1d1d;
             border-collapse: collapse;
             color: white;
             font-family: "Helvetica-Neue-Light";
@@ -108,20 +118,11 @@
             background-color: #181818;
         }
 
-        td {
-            /*position: relative;*/
-            width: 105px;
-            /*box-sizing: border-box;*/
-            border-collapse: collapse;
-            /*border: 1px solid black;*/
-            /* background-color: #1d1d1d */
-        }
-
         button {
             height: 26px;
             width: 100%;
             border: none;
-            background-color: #FF5733;
+            background-color: #283593;
             border-radius: 13px;
             color: white;
         }
@@ -136,20 +137,13 @@
         }
 
         .today-box {
-            font-size: 32px;
-            font-family: "Helvetica-Neue-Light";
-            color: white;
-            margin-top: 30px;
-        }
-
-        .today-schedule-box {
             width: 740px;
-            height: 200px;
+            height: 150px;
             font-size: 18px;
             font-family: "Helvetica-Neue-Light";
             color: white;
             margin-top: auto;
-            background-color: #1d1d1d;
+            background-color: #181818;
             padding: 20px;
             box-sizing: border-box;
 
@@ -158,19 +152,18 @@
         .schedule-list-box {
             width: 300px;
             height: 150px;
-            background-color: #FF5733;
             padding: 10px;
             border-radius: 20px;
             color: white;
             margin: auto;
-            font-family: "Helvetica-Neue-Light";
+            font-family: "Roboto-Light";
 
         }
 
         .day-schedule {
             font-size: 14px;
             margin-left: 10px;
-            margin-top: 5px;
+            margin-top: 8px;
         }
 
         .shift-avatar {
@@ -188,6 +181,8 @@
             height: 20px;
             text-align: left;
             padding-left: 10px;
+            font-size: 14px;
+            color: gray;
         }
 
         .shift-user {
@@ -196,6 +191,19 @@
             font-size: 28px;
             padding-left: 10px;
         }
+
+        #schedule1 {
+            background-color: #283593;
+        }
+
+        #schedule2 {
+            background-color: #2E7D32;
+        }
+
+        #schedule3 {
+            background-color: #EF6C00;
+        }
+
     </style>
 </head>
 
@@ -214,7 +222,7 @@
     <div class="body" style="width:1920px; height:780px; display:flex; margin:auto;">
 
         <div class="body-left">
-            <div class="beam-schedule-box">Beam Schedule</div>
+            <div class="header-box">Schedule</div>
             <table id="calendar-header">
                 <tr>
                     <!-- label은 마우스로 클릭을 편하게 해줌 -->
@@ -235,8 +243,8 @@
 
             <table id="calendar"></table>
 
-            <div class="today-box">Today</div>
-            <div class="today-schedule-box">
+            <div class="header-box">Today</div>
+            <div class="today-box">
                 The third effect depends not only on the top position of the window’s scrollbar, but also on the width
                 property of the window. More specifically, we are making the following assumptions
             </div>
@@ -244,18 +252,44 @@
 
         <div class="body-center">
             <div style="height:80px"></div>
-            <div class="schedule-list-box">
-                <div style="display:inline-block; font-size:26px;">11</div>
-                <div style="display:inline-block; font-size:18px;">-14</div>
-                <div style="display:inline-block; font-size:20px; margin-left: 15px">Beam Operation Event 1</div>
+            <div class="schedule-list-box" id="schedule1">
+                <div style="display:inline-block; font-size:32px; font-weight: bold;">4</div>
+                <div style="display:inline-block; font-size:20px; font-weight: bold;">-6</div>
+                <div style="display:inline-block; font-size:18px; font-weight: bold; margin-left: 15px">Beam Operation Event 1</div>
                 <div class="day-schedule">Day 11 : Beam Standby</div>
                 <div class="day-schedule">Day 12 : Beam Injection to KOBRA </div>
                 <div class="day-schedule">Day 13 : Beam Standby</div>
                 <div class="day-schedule">Day 14 : Beam Injection to LAMS </div>
             </div>
+
+            <div style="height:40px"></div>
+
+            <div class="schedule-list-box" id="schedule2">
+                <div style="display:inline-block; font-size:32px; font-weight: bold;">12</div>
+                <div style="display:inline-block; font-size:20px; font-weight: bold;">-15</div>
+                <div style="display:inline-block; font-size:18px; font-weight: bold; margin-left: 15px">Beam Operation Event 1</div>
+                <div class="day-schedule">Day 11 : Beam Standby</div>
+                <div class="day-schedule">Day 12 : Beam Injection to KOBRA </div>
+                <div class="day-schedule">Day 13 : Beam Standby</div>
+                <div class="day-schedule">Day 14 : Beam Injection to LAMS </div>
+            </div>
+
+            <div style="height:40px"></div>
+
+            <div class="schedule-list-box" id="schedule3">
+                <div style="display:inline-block; font-size:32px; font-weight: bold;">25</div>
+                <div style="display:inline-block; font-size:20px; font-weight: bold;">-29</div>
+                <div style="display:inline-block; font-size:18px; font-weight: bold; margin-left: 15px">Beam Operation Event 1</div>
+                <div class="day-schedule">Day 11 : Beam Standby</div>
+                <div class="day-schedule">Day 12 : Beam Injection to KOBRA </div>
+                <div class="day-schedule">Day 13 : Beam Standby</div>
+                <div class="day-schedule">Day 14 : Beam Injection to LAMS </div>
+            </div>
+
         </div>
 
         <div class="body-right">
+            <div class="header-box">Shift</div>
             <table>
                 <tr>
                     <th class="shift-avatar" rowspan="2"><img src="images/avatar.svg"></th>
